自助售货机模拟程序1.0.0

--- a/设计文档.md
+++ b/设计文档.md
@@ -8,8 +8,8 @@
 
 ### 项目目标
 
-- 实现能展示货架上的商品的简单tui界面，并提供购买入口，而且在购买完成之后最多停留3秒自动返回初始界面，等待下一次购买。
+- 实现能展示货架上的商品的简单控制台界面，并提供购买入口，而且在购买完成之后自动返回初始界面，等待下一次购买。
 - 提供管理者秘钥，输入秘钥后进入管理模式，能对商品进行添加，下架，以及关机等操作
 - 能通过简单的修改配置以适配不同大小的售货机，能根据Config.h中设置的宽高自动调整界面
-- 支持硬币购买，购买流程为：选择商品(可多选)->完成选择->进行投币->投币到达总金额->完成购买，商品数量减少，售货机中的硬币数增加->3秒后自动退出
-- 所有关于货物的信息应保存在文件中，在关机(退出程序)时不会丢失。
+- 支持硬币购买，购买流程为：选择商品(可多选)->完成选择->进行投币->投币到达总金额->完成购买，商品数量减少，售货机中的硬币数增加->自动退出->返回初始界面
+- 所有关于货物的信息应保存在数据库中，在关机(退出程序)时不会丢失。
