--- a/项目日志.md
+++ b/项目日志.md
@@ -8,3 +8,54 @@
 
 用晚上的一点时间完善了一下框架，基本分好了模块，剩下点时间搓函数，复习了一下C语言文件IO。
 
+## 9.11
+
+### 白天
+
+直接对txt文件写入读取商品信息是一件缓慢而愚蠢的事情，但是我不可能使用MySQL，直到我找到了嵌入式的SQLite......，我似乎发现了不得了的新大陆！
+
+### 晚上
+
+用perror()和exit()重写了关键错误处理，改善了一下#include关系，跟AI学会了用fgets()，strtol()，strtod()进行更安全的输入，用这几个函数构建了几个相对安全的input()系列函数来替换掉愚蠢的scanf()，解决了相当一部分恶意输入。
+
+
+
+## 9.12
+
+### 白天
+
+安装、配置和学习SQLite的使用，在把SQLite嵌入进项目的时候改进了一下项目结构
+
+### 晚上
+
+建库，建表，写了几个跟数据库操作有关的函数，顺带还捡起了几乎忘掉的SQL语句。
+
+## 9.13
+
+继续写了几个SQLite API调用函数，完善了一下底层，开始写交互逻辑。
+
+## 9.14
+
+研究状态机和对付中文乱码，继续写交互逻辑
+
+## 9.15
+
+基本完成交互逻辑，发布版本1.0.0，完成level1-1,level1-2,level1-3,level2-1,level2-2。
+
+## 版本1.0.0总结
+
+本项目是我做的第一个C语言项目，它本来是为了做题而写的，但开发着开发着，它对我的意义已经不是一道题了。
+
+虽然它并不完美，随机发生bug、界面潦草、模块隅合度比较高、数据操作方面的代码重复率高且性能比较低、没有GUI(如果再给我时间研究怎么用C语言做Qt，而且我还想发布版本2.0.0的话，就能有)。但是目前为止它CMake+C+SQLite的架构和模块化设计(虽然很原始)应该已经超过了对于一个玩具的要求了。
+
+先总结一下过程吧：前面2天基本都是在构思和完善框架，顺带复习了很多C语言的知识。第三天发现了SQLite数据库，然后第3、4天基本都在研究将SQLite嵌入进项目里以及 SQLite API调用，建库，还有复习SQL语句。第5天完善底层数据操作函数，第6、7天写用户交互逻辑和debug。
+
+首先，做这个项目，我的C语言原来只会做题，现在虽然大项目不会弄，但是能造小玩具了。
+
+然后，这个过程中收获比较大的就是会了SQLite的基本用法，以前学MySQL的时候，总是纳闷如何实现软件的可移植性，现在会了SQLite之后，才感觉MySQL更像是企业级web应用使用的，如果要保存数据到本地或者做嵌入式开发，就用SQLite。
+
+状态机的设计模式也算一个收获吧，现在也发现了自己模块的设计还相当原始，或许得弄本有关程序整体规划的书读读了。
+
+还有一些优化数据库操作性能的方法像什么连接池，全局连接还没来得及研究，不然收获还会更大。
+
+如果DDL前做测试还有什么问题再做修订版吧，1.0.0版本就先这样了，给自己好好过个中秋去了。
